--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     <section id="darshan" class="my-8">
       <h2 class="text-2xl font-bold text-orange-700">Live Darshan</h2>
       <div class="mt-4 flex justify-center">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OewwVIp-ko0" title="Sai Baba Bhajan" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/hI6UITxbprg" 
+        title="Sai Baba Aarti - Shirdi Live Darshan" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
       </div>
     </section>
 
@@ -53,7 +57,11 @@
       <h2 class="text-2xl font-bold text-orange-700">Sai Bhajans</h2>
       <p class="mt-2">Enjoy soulful bhajans dedicated to Sai Baba.</p>
       <div class="mt-4 flex justify-center">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/OewwVIp-ko0" title="Sai Baba Bhajan" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/hI6UITxbprg" 
+        title="Sai Baba Bhajan" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
       </div>
     </section>
 
